# pyaoc

./: README.md  aoc  pyproject.toml
pyaoc/: main.py  utils.py
pyaoc/year2015/: day01.py
pyaoc/year2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
pyaoc/year2023/: day01.py  day02.py  day03.py  day04.py  day05.py
pyaoc/year2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
pyaoc/year2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
