[tool.poetry]
name = "pyaoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "I", "UP"]
fix = true
line-length = 100
ignore-init-module-imports = true

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
