[project]
name = "pyaoc"
version = "0.1.0"
description = "Python solutions for Advent of Code"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
 "basedpyright>=1.34.0",
 "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["E", "F", "W", "A", "B", "PLC", "PLE", "PLW", "I", "RUF", "UP"]

[tool.basedpyright]
typeCheckingMode = "strict"
